# chorus-auth

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  comprehensive_demo.py  debug_runner.sh  demo_scenarios.sh  deployment_scripts.sh  frontend_demo.py  kafka_websocket_bridge.py  launch_demo.py  launch_hackathon_demo.py  run_backend_api.sh  run_frontend_demo.sh  setup_kafka_env.py  simple_demo.py  unified_server.py  websocket_demo_server.py
backend/: .env.example  Dockerfile  Dockerfile.cloudrun  README.md  alembic.ini  cli_dashboard.py  comprehensive_demo.py  conftest.py  create_demo_topics.py  demo_cli_dashboard.py  demo_intervention.py  demo_simulation.py  demo_voice_interaction.py  deploy-docker.sh  deploy-voice-config.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  e2e_demo.py  final_system_validation.py  frontend_demo.py  k8s-deployment.yml  launch_optimized_demo.py  live_demo.py  performance_benchmark.py  performance_test.py  pyproject.toml  pytest.ini  redis.conf  requirements-voice.txt  requirements.txt  restart_infrastructure.sh  run_comprehensive_demo.sh  setup.py  setup_env.sh  start_system.py  test_alerting_end_to_end.py  test_kafka_init.py  test_system_integration.py  validate-deployment.sh  (+1 more)
backend/deployment/: chorus-agent-predictor.service
backend/migrations/: env.py
backend/scripts/: fetch_my_agents.py
backend/src/: __init__.py  config.py  config_validator.py  control_plane_app.py  control_plane_config.py  error_handling.py  event_bridge.py  event_bus.py  event_sourcing.py  integration_validator.py  load_testing.py  logging_config.py  main.py  performance_optimizer.py  production_readiness.py  redis_bridge.py  stream_analytics.py  stream_monitoring.py  stream_processor.py  system_health.py  system_lifecycle.py
backend/tests/: __init__.py  test_agent_simulation.py  test_event_sourcing.py  test_gemini_integration.py  test_integration_basic.py  test_integration_complete_pipeline.py  test_integration_complete_pipeline_v2.py  test_integration_core_workflows.py  test_integration_end_to_end.py  test_integration_failure_scenarios.py  test_integration_realtime_dataflow.py  test_integration_simple.py  test_interfaces.py  (+46 more)
(+201 files in other folders)
